# ros

./: README.rst  prepend_header.py
src/: stuff.tar
src/blockc_bokinsky_huston/: CMakeLists.txt  package.xml  play.launch
src/blockc_bokinsky_huston/data/: blockc.instr
src/blockc_bokinsky_huston/src/: turtleheeder.cpp  turtleherder.cpp  turtleherder.h
src/bokinsky_liles_wu_project3/: CMakeLists.txt  package.xml
src/bokinsky_liles_wu_project3/launch/: diagnostic_watch.launch  project3.launch  turtlebot_teleop.launch
src/bokinsky_liles_wu_project3/src/: project3_node.cpp  report_batt_wifi.cpp  sensor_info.cpp  wifi_mon.cpp
src/bokinsky_liles_wu_project4/: CMakeLists.txt  package.xml
src/bokinsky_liles_wu_project4/include/bokinsky_liles_wu_project4/: create_autodrive.h  project4.h  safe_sensor.h  safe_wifi.h
src/bokinsky_liles_wu_project4/launch/: create_autodrive.launch  project4.launch
src/bokinsky_liles_wu_project4/src/: create_autodrive.cpp  project4_env.cpp  project4_main.cpp  safe_sensor.cpp  safe_wifi.cpp  wifi_mon.cpp
src/bokinsky_liles_wu_project5/: CMakeLists.txt  package.xml
src/bokinsky_liles_wu_project5/launch/: image_transport.launch  project5.launch
src/bokinsky_liles_wu_project5/src/: transport_images.cpp
src/count_people_bokinsky/: CMakeLists.txt  count.launch  package.xml
src/count_people_bokinsky/src/: count_people_bokinsky.cpp  project2.cpp  project2.h  trackers.cpp  trackers.h
src/create_setup/: CMakeLists.txt  package.xml  wkstationlaunch.launch
src/proj3a/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  sensor_info.cpp  sensor_info.cpp~
